# waybar-pilot

./: .gitignore  LICENSE  Makefile  README.md  config.py  controller.py  entry_point.py  main.py  pyproject.toml
cursor/: __init__.py  manager.py  sensor.py
hyprland/: __init__.py  fullscreen_handler.py  socket2.py
src/waybar_pilot/: __init__.py  __main__.py  config.py  controller.py  main.py
src/waybar_pilot/cursor/: __init__.py  events.py  manager.py  sensor.py
src/waybar_pilot/hyprland/: client.py  fullscreen_handler.py  models.py  socket2.py
src/waybar_pilot/state/: __init__.py  engine.py
src/waybar_pilot/waybar/: __init__.py  instance.py  manager.py
state/: engine.py
waybar/: instance.py  manager.py
