[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "waybar-pilot"
version = "0.1.2"
description = "Intelligent waybar visibility management for Hyprland"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }

[project.scripts]
waybar-pilot = "waybar_pilot.main:main"

[dependency-groups]
dev = [
  "ruff>=0.12.0",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
